Updating makefiles to use builtin rules

--- a/src/Makefile.avr
+++ b/src/Makefile.avr
@@ -38,10 +38,11 @@ AR = avr-ar
 MCU ?= atmega328p
 FREQUENCY ?= 16000000
 
-CCFLAGS += -mmcu=$(MCU) -DF_CPU=$(FREQUENCY)
+CPPFLAGS += -mmcu=$(MCU) -DF_CPU=$(FREQUENCY)
+CXXFLAGS += -fno-rtti -fno-exceptions
 
 ifeq ($(ADAFRUIT),y)
-INCLUDES += -I./lcd_hal/avr/arduino
+    CPPFLAGS += -I./lcd_hal/avr/arduino
 endif
 
 include Makefile.common
