--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -21,44 +21,35 @@
 #    SOFTWARE.
 #
 
-SRCS_C = \
-	v2/ssd1306_utf8.c \
-	lcd_hal/interface.c \
 
-SRCS_CPP = \
-	lcd_hal/avr/platform.cpp \
-	lcd_hal/avr/ssd1306_i2c_twi.cpp \
-	lcd_hal/avr/ssd1306_spi_avr.cpp \
-	lcd_hal/avr/ssd1306_i2c_embedded.cpp \
-	lcd_hal/avr/ssd1306_spi_usi.cpp \
-	lcd_hal/linux/platform.cpp \
-	lcd_hal/linux/linux_i2c.cpp \
-	lcd_hal/linux/linux_spi.cpp \
-	lcd_hal/linux/sdl_i2c.cpp \
-	lcd_hal/linux/sdl_spi.cpp \
-	lcd_hal/mingw/platform.cpp \
-	lcd_hal/arduino/platform.cpp \
-	lcd_hal/arduino/arduino_spi.cpp \
-	lcd_hal/arduino/arduino_wire.cpp \
-	lcd_hal/stm32/platform.cpp \
-	v2/lcd/lcd_common.cpp \
-	v2/lcd/pcd8544/lcd_pcd8544.cpp \
-	v2/lcd/sh1106/lcd_sh1106.cpp \
-	v2/lcd/ssd1306/lcd_ssd1306.cpp \
-	v2/lcd/ssd1325/lcd_ssd1325.cpp \
-	v2/lcd/ssd1327/lcd_ssd1327.cpp \
-	v2/lcd/ssd1331/lcd_ssd1331.cpp \
-	v2/lcd/ssd1351/lcd_ssd1351.cpp \
-	v2/lcd/st7735/lcd_st7735.cpp \
-	v2/lcd/il9163/lcd_il9163.cpp \
-	v2/lcd/ili9341/lcd_ili9341.cpp \
-	v2/nano_engine/core.cpp \
-
-SRCS = $(SRCS_C) $(SRCS_CPP)
+OBJS += v2/ssd1306_utf8.o \
+	lcd_hal/interface.o \
+	lcd_hal/avr/platform.o \
+	lcd_hal/avr/ssd1306_i2c_twi.o \
+	lcd_hal/avr/ssd1306_spi_avr.o \
+	lcd_hal/avr/ssd1306_i2c_embedded.o \
+	lcd_hal/avr/ssd1306_spi_usi.o \
+	lcd_hal/linux/platform.o \
+	lcd_hal/linux/linux_i2c.o \
+	lcd_hal/linux/linux_spi.o \
+	lcd_hal/linux/sdl_i2c.o \
+	lcd_hal/linux/sdl_spi.o \
+	lcd_hal/mingw/platform.o \
+	lcd_hal/arduino/platform.o \
+	lcd_hal/arduino/arduino_spi.o \
+	lcd_hal/arduino/arduino_wire.o \
+	lcd_hal/stm32/platform.o \
+	v2/lcd/lcd_common.o \
+	v2/lcd/pcd8544/lcd_pcd8544.o \
+	v2/lcd/sh1106/lcd_sh1106.o \
+	v2/lcd/ssd1306/lcd_ssd1306.o \
+	v2/lcd/ssd1325/lcd_ssd1325.o \
+	v2/lcd/ssd1327/lcd_ssd1327.o \
+	v2/lcd/ssd1331/lcd_ssd1331.o \
+	v2/lcd/ssd1351/lcd_ssd1351.o \
+	v2/lcd/st7735/lcd_st7735.o \
+	v2/lcd/il9163/lcd_il9163.o \
+	v2/lcd/ili9341/lcd_ili9341.o \
+	v2/nano_engine/core.o \
 
 include canvas/Makefile.src
-
-OBJS_C = $(addprefix src/, $(addsuffix .o, $(basename $(SRCS_C))))
-
-OBJS = $(addprefix $(BLD)/, $(addsuffix .o, $(basename $(SRCS))))
-
