fixing ESP32 compilation on travis ci

--- a/examples/Makefile.esp32
+++ b/examples/Makefile.esp32
@@ -63,4 +63,5 @@ $(BLD)/esp32/main/component.mk:
 all: $(BLD)/esp32/main/component.mk \
      $(BLD)/esp32/components/lcdgfx/component.mk \
      $(BLD)/esp32/components/sketch/main.cpp
+	$(MAKE) -C $(BLD)/esp32 defconfig
 	$(MAKE) -C $(BLD)/esp32
