--- a/Makefile.cpputest
+++ b/Makefile.cpputest
@@ -6,7 +6,7 @@ OBJ_UNIT_TEST = \
         unittest/ssd1331_tests.o \
         unittest/utils/utils.o \
 
-unittest: $(OBJ_UNIT_TEST) linux ssd1306_sdl
+unittest: $(OBJ_UNIT_TEST) library ssd1306_sdl
 	$(CXX) $(CPPFLAGS) -o $(BLD)/unit_test $(OBJ_UNIT_TEST) -L$(BLD) -lm -pthread -llcdgfx -lssd1306_sdl -lCppUTest -lCppUTestExt $(shell sdl2-config --libs)
 
 check: unittest
