--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -22,7 +22,7 @@
 #
 
 
-OBJS += v2/ssd1306_utf8.o \
+OBJS += v2/utf8.o \
 	lcd_hal/avr/platform.o \
 	lcd_hal/avr/i2c_twi.o \
 	lcd_hal/avr/spi_avr.o \
