--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,5 @@ jobs:
       compiler: clang
       script:
         - make ARCH=linux SDL_EMULATION=y check
-        - travis wait 20 make cppcheck
+        - make cppcheck
 
