Added initial support for SH1107 128x64 display

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -45,6 +45,7 @@ OBJS += v2/utf8.o \
 	v2/lcd/lcdany/lcd_any.o \
 	v2/lcd/pcd8544/lcd_pcd8544.o \
 	v2/lcd/sh1106/lcd_sh1106.o \
+	v2/lcd/sh1107/lcd_sh1107.o \
 	v2/lcd/ssd1306/lcd_ssd1306.o \
 	v2/lcd/ssd1325/lcd_ssd1325.o \
 	v2/lcd/ssd1327/lcd_ssd1327.o \
