--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,13 @@ jobs:
 
 # Orchestrate our job run sequence
 workflows:
+  version: 2
   host_and_esp32:
     jobs:
       - build
       - esp32:
           requires:
             - build
+          filters:
+            branches:
+              only: master
