--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 orbs:
   coveralls: coveralls/coveralls@1.0.6
 jobs:
@@ -50,7 +50,7 @@ jobs:
             make clean
             make ARCH=avr SDL_EMULATION=n
 
-  esp32:
+  test:
     machine:
       image: ubuntu-2004:202101-01
     steps:
@@ -81,11 +81,11 @@ jobs:
 
 # Orchestrate our job run sequence
 workflows:
-  version: 2
+  version: 2.1
   host_and_esp32:
     jobs:
       - build
-      - esp32:
+      - test:
           requires:
             - build
           filters:
