--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,10 +85,11 @@ workflows:
   version: 2.1
   host_and_esp32:
     jobs:
-      - build
+      - build:
 #      - esp32:
 #          requires:
 #            - build
+          context: github
           filters:
             branches:
               only: master
