Another fix for circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ workflows:
 #          requires:
 #            - build
       - build:
-          context: github
+#          context: github
           filters:
             branches:
               only: master
