Walkaround for cpp-coveralls issue and circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,9 @@ jobs:
           name: Upload coverage statistics
           command: |
              sudo find / -name coveralls
-             COVERALLS_REPO_TOKEN=KxXPskywURsRPcsDEgK5eq4sdNncpk6yB coveralls -b ./src --exclude docs --exclude unittest --exclude bld --exclude tools --exclude examples --exclude examples_to_do --gcov-options '\-lp'
+             echo -e "service_name: circle-ci\n" > .coveralls.yml \
+             && TRAVIS_JOB_ID="#${CIRCLE_BUILD_NUM}" COVERALLS_REPO_TOKEN=KxXPskywURsRPcsDEgK5eq4sdNncpk6yB coveralls -b ./src \
+             --exclude docs --exclude unittest --exclude bld --exclude tools --exclude examples --exclude examples_to_do --gcov-options '\-lp'
 #      - store_artifacts:
 #          path: embedded/target/bin.elf
 #          destination: binary.elf
