--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -57,6 +57,7 @@ OBJS += v2/utf8.o \
 	v2/lcd/st7789/lcd_st7789.o \
 	v2/lcd/il9163/lcd_il9163.o \
 	v2/lcd/ili9341/lcd_ili9341.o \
+	v2/lcd/elw3501aa/lcd_elw3501aa.o \
 	v2/nano_engine/core.o \
 
 include canvas/Makefile.src
