--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,7 +9,6 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://www.bitcoinqrcodemaker.com/?style=ethereum&address=0x20608A71470Bc84a3232621819f578Fb9C02A460',
-'https://www.bitcoinqrcodemaker.com/?style=bitcoin&address=3CtUY6Ag2zsvm1JyqeeKeK8kjdG7Tnjr5W'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://etherscan.io/address/0x20608A71470Bc84a3232621819f578Fb9C02A460','https://btc.com/3CtUY6Ag2zsvm1JyqeeKeK8kjdG7Tnjr5W'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 
 # custom 'https://www.paypal.me/lexus2k' - Unfortunately is blocked
