--- a/Makefile.cpputest
+++ b/Makefile.cpputest
@@ -1,5 +1,9 @@
 .PHONY: unittest check clean_unittest
 
+CPPUTEST_HOME ?= /usr/local
+
+CXXFLAGS += -I$(CPPUTEST_HOME)/include -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED
+
 OBJ_UNIT_TEST = \
         unittest/main.o \
         unittest/ssd1306_tests.o \
@@ -7,8 +11,10 @@ OBJ_UNIT_TEST = \
         unittest/utils/utils.o \
 
 unittest: $(OBJ_UNIT_TEST) library ssd1306_sdl
-	$(CXX) $(CPPFLAGS) -o $(BLD)/unit_test $(OBJ_UNIT_TEST) -L$(BLD) -lm -pthread -llcdgfx -lssd1306_sdl -lCppUTest -lCppUTestExt $(shell sdl2-config --libs)
+	$(CXX) $(CPPFLAGS) -o $(BLD)/unit_test -L$(BLD) -L$(CPPUTEST_HOME)/lib $(OBJ_UNIT_TEST) -lm -pthread \
+	   -llcdgfx -lssd1306_sdl $(shell sdl2-config --libs) $(shell pkg-config --libs cpputest)
 
+# make ARCH=linux EXTRA_CPPFLAGS="--coverage" SDL_EMULATION=y check
 check: unittest
 	$(BLD)/unit_test
 
