--- a/examples/Makefile.esp32
+++ b/examples/Makefile.esp32
@@ -39,15 +39,19 @@ endif
 
 BLD ?= ../bld
 PROJECT ?= demos/ssd1306_demo
+BUILD_FOR_OLD_ESPIDF ?= n
 
 $(BLD)/esp32/components/lcdgfx/component.mk:
 	mkdir -p $(BLD)/esp32/components/lcdgfx
 	cp -a ../src $(BLD)/esp32/components/lcdgfx/
+	cp -a ../CMakeLists.txt $(BLD)/esp32/components/lcdgfx/
 	cp -a ../component.mk $(BLD)/esp32/components/lcdgfx/
 
 $(BLD)/esp32/components/sketch/main.cpp:
 	mkdir -p $(BLD)/esp32/components/sketch
 	rm -rf $(BLD)/esp32/components/sketch/*
+	echo "file(GLOB SOURCES *.cpp)" > $(BLD)/esp32/components/sketch/CMakeLists.txt
+	echo "idf_component_register(SRCS \$${SOURCES} INCLUDE_DIRS "." REQUIRES lcdgfx)" >> $(BLD)/esp32/components/sketch/CMakeLists.txt
 	cp -a $(PROJECT)/* $(BLD)/esp32/components/sketch/
 	mv $(BLD)/esp32/components/sketch/$(notdir $(PROJECT)).ino $(BLD)/esp32/components/sketch/main.cpp
 	echo "COMPONENT_ADD_INCLUDEDIRS := ." > $(BLD)/esp32/components/sketch/component.mk
@@ -60,8 +64,28 @@ $(BLD)/esp32/main/component.mk:
 	echo "PROJECT_NAME:=$(notdir $(PROJECT))" > $(BLD)/esp32/Makefile
 	echo "include \$$(IDF_PATH)/make/project.mk" >> $(BLD)/esp32/Makefile
 
+$(BLD)/esp32/main/CMakeLists.txt:
+	mkdir -p $(BLD)/esp32/main
+	echo "idf_component_register(SRCS \"esp32_main.cpp\"" > $(BLD)/esp32/main/CMakeLists.txt
+	echo "    INCLUDE_DIRS \".\"" >> $(BLD)/esp32/main/CMakeLists.txt
+	echo "    REQUIRES sketch)" >> $(BLD)/esp32/main/CMakeLists.txt
+
+$(BLD)/esp32/CMakeLists.txt:
+	mkdir -p $(BLD)/esp32
+	echo "cmake_minimum_required(VERSION 3.16)" > $(BLD)/esp32/CMakeLists.txt
+	echo "include(\$$ENV{IDF_PATH}/tools/cmake/project.cmake)" >> $(BLD)/esp32/CMakeLists.txt
+	echo "project(ssd1306_demo)" >> $(BLD)/esp32/CMakeLists.txt
+	echo "SET(EXTRA_COMPONENT_DIRS main components)" >> $(BLD)/esp32/CMakeLists.txt
+
 all: $(BLD)/esp32/main/component.mk \
      $(BLD)/esp32/components/lcdgfx/component.mk \
      $(BLD)/esp32/components/sketch/main.cpp
+ifeq ($(BUILD_FOR_OLD_ESPIDF),y)
 	$(MAKE) -C $(BLD)/esp32 defconfig
 	$(MAKE) -C $(BLD)/esp32
+else
+	cd $(BLD)/esp32 && idf.py build
+
+all: $(BLD)/esp32/CMakeLists.txt \
+	$(BLD)/esp32/main/CMakeLists.txt
+endif
